--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
     
 </head>
@@ -97,6 +97,6 @@
 </footer>
 
     
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
