--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p id="junk"></p>
             <p>Maybe a Portfolio for my loved ones...❤️</p>
         </div>
-        <img src="/IMG_0049.JPG" alt="">
+        <img src="IMG_0049.JPG" alt="">
         
     </div>
 
